# Movie_Review

./: .gitignore  .gitmodules  Caddyfile  docker-compose.yaml
.github/workflows/: main.yml
backend/: .gitignore  Dockerfile  Model.py  connection.py  main.py  noxfile.py  pyproject.toml  requirements.txt  schemas.py
backend/middleware/: middleware.py
backend/movies/: movies.py
backend/src/: Model.py  main.py  schemas.py
backend/src/middleware/: middleware.py
backend/src/movies/: get_movies.py  movies.py  s3.py
backend/src/reviews/: reviews.py
backend/src/userAUTH/: auth.py  mailService.py
backend/userAUTH/: Model.py  auth.py  connection.py  mailService.py  middleware.py
db/: docker-compose.yml
frontend/: Caddyfile  Dockerfile  flutter_launcher_icons.yaml  pubspec.yaml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/lib/: auth.dart  colorscheme.dart  homepage.dart  init_page.dart  login_page.dart  main.dart  models.dart  movie_card.dart  movie_detail_page.dart  movies.dart  redirects.dart  search_page.dart  series_details_page.dart  shows.dart  signup_page.dart  theme.dart
